@@ -7,6 +7,8 @@ use strictures 2;
 
 with 'Net::Object::Peer';
 
+sub default_events { qw[ A B ] }
+
 sub _cb_A { print "recieved event A\n" }
 
 sub _cb_B { print "recieved event B\n" }
