@@ -22,6 +22,8 @@ use Net::Object::Peer;
     with 'MyTest::Role::Node';
 
 
+    sub default_events { qw[ changed ] }
+
     sub _cb_changed {
 
         my ( $self, $event ) = @_;
